fixed alignment of photos and finished breakpoint 900px

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -380,6 +380,10 @@
     margin-right: auto;
   }
 
+  &__friends {
+    display: flex;
+  }
+  
   &__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -403,6 +407,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -462,6 +471,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     text-transform: uppercase;
